tests/analyzer/errors/big_self_outside_decl.rv
fn main() {
    var invalid: Self
    fn invalid(a: int) -> Self {}
}
